# expense-flow

./: README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: analytics.py  auth.py  categories.py  config.py  database.py  db.py  deps.py  expenses.py  main.py  models.py  schemas.py  security.py  users.py
backend/app/analytics/: routes.py
backend/app/auth/: dependencies.py  routes.py  security.py
backend/app/categories/: routes.py
backend/app/core/: config.py
backend/app/expenses/: routes.py
backend/app/models/: __init__.py  categories.py  expenses.py  users.py
backend/app/users/: routes.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 05e3d2a39b12_update_expenses_table.py  392494d71eab_create_users_table.py  6615896981f1_create_expenses_table.py  6a2213b1df19_add_join.py  738027aa2406_add_index_to_tables.py  862ac4848293_add_join.py  c0d8ce5996e0_create_category_table.py
frontend/: .gitignore  Dockerfile  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/app/routes/: home.tsx
frontend/src/: App.svelte
frontend/src/lib/api/: analytics.ts  auth.ts  category.ts  client.ts  expense.ts  users.ts
frontend/src/lib/components/: AddCategoryDialog.svelte  AddExpenseDialog.svelte  DashboardLayout.svelte  LineChart.svelte  (+1 more)
frontend/src/router/: guards.ts
frontend/src/routes/: Analytics.svelte  Categories.svelte  Dashboard.svelte  Expenses.svelte  Home.svelte  Login.svelte  NotFound.svelte  Register.svelte
(+1 files in other folders)
